@@ -32,7 +32,7 @@
 	  <property name="layout_style">GTK_BUTTONBOX_END</property>
 
 	  <child>
-	    <widget class="GtkButton" id="Cancel">
+	    <widget class="GtkButton" id="cancel_button">
 	      <property name="visible">True</property>
 	      <property name="can_default">True</property>
 	      <property name="can_focus">True</property>
@@ -45,7 +45,7 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkButton" id="OK">
+	    <widget class="GtkButton" id="ok_button">
 	      <property name="visible">True</property>
 	      <property name="can_default">True</property>
 	      <property name="can_focus">True</property>
@@ -1560,7 +1560,7 @@ B/G (2.4 GHz)</property>
       <property name="column_spacing">12</property>
 
       <child>
-	<widget class="GtkLabel" id="label41">
+	<widget class="GtkLabel" id="wireless_security_combo_label">
 	  <property name="visible">True</property>
 	  <property name="label" translatable="yes">Security:</property>
 	  <property name="use_underline">False</property>
@@ -1588,8 +1588,9 @@ B/G (2.4 GHz)</property>
       </child>
 
       <child>
-	<widget class="GtkComboBox" id="wireless_security_type">
+	<widget class="GtkComboBox" id="wireless_security_combo">
 	  <property name="visible">True</property>
+	  <property name="items" translatable="yes">Foo</property>
 	  <property name="add_tearoffs">False</property>
 	  <property name="focus_on_click">True</property>
 	</widget>
