@@ -26,6 +26,7 @@
 #include <glib-object.h>
 #include <nm-connection.h>
 #include <glade/glade-xml.h>
+#include <gtk/gtksizegroup.h>
 
 #define NM_TYPE_CONNECTION_EDITOR    (nm_connection_editor_get_type ())
 #define NM_IS_CONNECTION_EDITOR(obj) (G_TYPE_CHECK_INSTANCE_TYPE ((obj), NM_TYPE_CONNECTION_EDITOR))
@@ -38,6 +39,7 @@ typedef struct {
 	NMConnection *connection;
 	GHashTable *pages;
 	GtkWidget *dialog;
+	GtkSizeGroup *wsec_group;
 
 	guint32 last_channel;
 } NMConnectionEditor;
